argocd/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: c1pay
  labels:
    app.kubernetes.io/part-of: c1pay
