argocd/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: c1pay
  namespace: c1pay
  labels:
    app.kubernetes.io/name: c1pay
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: c1pay
